fix behind section of rm2

--- a/assets/css/discography.css
+++ b/assets/css/discography.css
@@ -248,7 +248,7 @@ iframe{
   
 }
 .behind div{
-  padding-top: 5%;
+  padding-top: 8%;
 }
 
 .more {
